# MMGPU

./: .dockerignore  .gitignore  Dockerfile  benchmark_scaling.py  conftest.py  pyproject.toml  run_all.py  run_proof_search.py  run_setmm.py
.github/workflows/: docker-build.yml
data/: test_mini.mm
rust_ext/: Cargo.toml
rust_ext/src/: lib.rs
tensormm/: __init__.py  cpu_verifier.py  cuda_kernels.py  database.py  gpu_verifier.py  metal_verifier.py  parser.py  proof_search.py  tensor_verifier.py  tokenizer.py
tensormm/tests/: test_correctness.py  test_cpu_verifier.py  test_cuda_kernels.py  test_database.py  test_full_correctness.py  test_gpu_verifier.py  test_negative_proofs.py  test_parser.py  test_tensor_verifier.py  test_tokenizer.py  test_wheeler_suite.py
